fixed alignment

--- a/style.css
+++ b/style.css
@@ -34,7 +34,19 @@ img, picture, video, canvas, svg {
 
 body {
     font-family: 'Open Sans';
-    background-color: white;
+    background-color: #f5f5f5;
+}
+
+#menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -48,6 +60,27 @@ body {
 .navbar-brand {
     font-family: 'Satisfy', cursive;
     font-size: 1.7rem;
+}
+
+#offcanvasNavbar {
+    background-color: #BC8888;
+    border-left: none;
+    width: auto;
+}
+
+#offcanvasNavbarLabel {
+    color: white;
+    font-family: 'Satisfy', cursive;
+    padding-right: 1rem;
+    font-size: 1.7rem;
+}
+
+.offcanvas-header {
+    padding: 2rem;
+}
+
+.offcanvas-body {
+    margin: 0 0 0 2rem;
 }
 
 h1,
@@ -122,6 +155,10 @@ p {
 .price {
     font-size: 1.2rem;
     color: #484848;
+}
+
+.price {
+    text-align: right;
 }
 
 .item-text {
